<resources>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="textToHelpButton">Справка</string>
    <string name="textToGuideButton">Обучение</string>
    <string name="textToScanButton">Сканирование</string>
    <string name="textLogo">IntCube</string>
    <string name="textBackButton">Назад</string>
    <string name="textScanButton">Сканировать</string>
    <string name="textToSolveButton">Решить</string>
    <string name="textToScanColorsButton">Далее</string>
    <string name="app_name">IntCube</string>
    <string name="textToCubeButton">Виртуальный кубик</string>
    <string name="textToModelCube">Ручной ввод</string>
    <string name="textToSettings">Настройки</string>
    <string name="textTo2x2">2x2x2</string>
    <string name="textTo3x3">3x3x3</string>
    <string name="textTo4x4">4x4x4</string>
    <string name="textToAxis">Axis</string>
    <string name="input">Выбрать</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="rotateElement">Развернуть</string>
    <string name="deleteElement">Удалить</string>
    <string name="chooseColors">Выбор цветов</string>
    <string name="clearColorsElement">Очистить цвета</string>
    <string name="clearColorElement">Очистить цвет</string>
    <string name="guideNote">Чтобы открыть курс, нажмите на кнопку с подписью, соответствующей типу головоломки.
        При нажатии открывется страница, содержащая текст с инструкциями по сборке.</string>
    <string name="cubeNote">Взаимодействия с виртуальным кубиком:
        \n- Управление осуществляется при помощи касаний и движений пальцами.
        \n- Если движение было начато за пределами кубика, то модель повернется, иначе будет повернута соответствующая грань.
        \nТакже присутствуют четыре кнопки:
        \n1. 2х2, 3х3, Axis - переключают виртуальный кубик на 2х2, 3х3, Axis Cube соответственно.
        \n2. Reset - возвращает виртуальный кубик в исходное состояние.
    </string>
    <string name="manualInputNote">1. Выбрать тип кубика для ручного ввода
        \n2. Чтобы закрасить стикеры кубика, нажимите на цветные кнопки ниже, предварительно выбрав деталь.
        \n3. Для перехода к следующей стороне нажимите на стрелочки.
        \n4. После полного заполнения будет доступна кнопка “Решить”
    </string>
    <string name="solutionNote">1. Выбрать желаемый тип решения
        \n2. Для перехода между шагами решения нажимать на кнопки "След. шаг" и "Пред. шаг"
        \n3. Для вывода решения в полном описании нажать на кнопку "Полное описание"
        \n4. Для вывода решения в языке вращений нажать на кнопку "Язык вращений"
    </string>
    <string name="scanTypeNote">1. Наведите камеру на кубик и зафиксируйте её
        \n2. Если сканирование не происходит попробуйте повернуть кубик так, чтобы ыло видно больше граней
        \n3. Вы можете вернуться на главный экран нажав кнопку "Назад"
        \n4. Вы можете перейти на экран ручного ввода, для этого нажмите "Ручной ввод"
    </string>
    <string name="scan3x32x2Note">1. Наведите камеру на кубик, так, чтобы линии сетки совпали с линиями на кубике, и зафиксируйте её
        \n2. Вы можете подтвердить отсканированные цвета, для этого нажмите "Следующая сторона"
        \n3. Вы можете попробовать отсканировать ещё раз, для этого нажмите "Повторить попытку"
        \n4. Вы можете перейти на экран ручного ввода, нажав на кнопку "Ручной ввод"
        \n5. После сканирования всех сторон кнопка "Следующая сторона" перенаправит вас на экран сканирования
    </string>
    <string name="scanAxisNote">1. Перед сканированием разверните центы так, если бы они стояли в собранном положении
        \n2. Наведите камеру на кубик, так, чтобы линии сетки совпали с линиями на кубике, и зафиксируйте её
        \n3. Вы можете подтвердить отсканированную сторону, для этого нажмите "Сканировать"
        \n4. После нажатия на кнопку "Сканировать" откроется экран ручного ввода, где вы сможете редактировать отсканированную сторону
    </string>

    <string name="scanAxisManualNote">1. Выберете область редактирования(изначально кружок или центр), нажав на неё
        \n2. Текущая область редактирования подсвечивается
        \n3. Для установки детали в область редактирования  нажмите на одну из четырех предложенных деталей
        \n4. Вы можете развернуть деталь в области редактирования, для этого нажмите на кнопку "Развернуть"
        \n5. Для удаления детали в области редактирования нажмите на кнопку "Удалить"
        \n6. Вы можете заменить деталь в области редактирования, для этого нажмите на любую другую деталь
        \n6. Для перехода на следующую сторону нажмите на стрелочку. Под стрелочкой отображен центр стороны редактирования после перехода
        \n7. Вы можете отксканировать текущую сторону нажав на кнопку "Сканировать"
        \n8. После Заполнения всех сторон вы можете нажать на кнопку "Выбор цветов". После нажатия откроется экран ввода цветов
    </string>

    <string name="scanAxisManualColorsNote">1. Выберете область редактирования(изначально кружок или центр), нажав на неё
        \n2. Текущая область редактирования подсвечивается
        \n3. Для установки детали в область редактирования  нажмите на одну из четырех предложенных деталей
        \n4. Вы можете развернуть деталь в области редактирования, для этого нажмите на кнопку "Развернуть"
        \n5. Для удаления детали в области редактирования нажмите на кнопку "Удалить"
        \n6. Вы можете заменить деталь в области редактирования, для этого нажмите на любую другую деталь
        \n6. Для перехода на следующую сторону нажмите на стрелочку. Под стрелочкой отображен центр стороны редактирования после перехода
        \n7. Вы можете отксканировать текущую сторону нажав на кнопку "Сканировать"
        \n8. После Заполнения всех сторон вы можете нажать на кнопку "Выбор цветов". После нажатия откроется экран ввода цветов
        \n9. Манипулировани на экране выбора цвета происходит аналогично предыдущим пунктам
        \n10. У двуцветных деталей при выделении их в область редактирования подсвечивается белым цветом часть, для которой будет применен цвет
        \n11. Кнопка Очистить цвет удаляет цвета детали в текущей области редактирования
        \n12. После заполнения всех цветов вы можете нажать на кнопку Решить
        \n13. Кнопка назад вернет вас на экран выбора типа кубика, при этом весь прогресс будет потерян
    </string>

</resources>