<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectTypeActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:orientation="horizontal"
        app:rowCount="5">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/textTo2x2"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/cube2x2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="choosing2x2"
            android:text="@string/input"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/textTo3x3"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/cube3x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="choosing3x3"
            android:text="@string/input"
            app:layout_column="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTo4x4"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/cube4x4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="choosing4x4"
            android:text="@string/input"
            app:layout_column="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textToAxis"
            android:textSize="20sp"
            app:layout_column="0"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/cubeaxis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="choosingAxis"
            android:text="@string/input"
            app:layout_column="1"
            app:layout_row="3"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>