<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanColorActivity">


    <org.opencv.android.JavaCameraView
        android:id="@+id/tutorial1_activity_java_surface_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        opencv:camera_id="any"
        opencv:show_fps="false" />

    <SeekBar
        android:id="@+id/secondbar"
        android:layout_width="405dp"
        android:layout_height="100dp"
        android:layout_marginBottom="48dp"
        android:max="255"
        android:progress="128"
        app:layout_constraintBottom_toTopOf="@+id/buttonScanType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/firstbar"
        android:layout_width="405dp"
        android:layout_height="100dp"
        android:layout_marginBottom="96dp"
        android:max="255"
        android:progress="40"
        app:layout_constraintBottom_toTopOf="@+id/buttonScanType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="BackActivityScanType"
        android:text="@string/textBackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/buttonScanType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textScanButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonToScanColors"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/buttonBackToMain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonToScanColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:onClick="StartActivitySolution"
        android:text="@string/textToSolveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

    <ImageView
        android:id="@+id/leftupcorner"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="144dp"
        android:src="@drawable/one_color_edge_lda"
        app:layout_constraintBottom_toBottomOf="@+id/tutorial1_activity_java_surface_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/upedge"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="145dp"
        android:src="@drawable/two_color_edge_lda"
        app:layout_constraintBottom_toBottomOf="@+id/tutorial1_activity_java_surface_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/leftupcorner" />

</androidx.constraintlayout.widget.ConstraintLayout>