<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanTypeActivity">

    <org.opencv.android.JavaCameraView
        android:id="@+id/typeCamera"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="BackActivityMain"
        android:text="@string/textBackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/buttonScanType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textScanButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonToScanColors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBackToMain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/buttonToScanColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="startActivityScanColors"
        android:text="@string/textToScanColorsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <SeekBar
        android:id="@+id/seekBar6"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:max="255"
        android:progress="128"
        app:layout_constraintEnd_toEndOf="@+id/typeCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar7"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:max="255"
        android:progress="40"
        app:layout_constraintEnd_toEndOf="@+id/typeCamera"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/typeCamera"
        app:layout_constraintTop_toTopOf="@+id/typeCamera" />

    <SeekBar
        android:id="@+id/seekBar9"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:max="500"
        android:progress="250"
        app:layout_constraintEnd_toEndOf="@+id/typeCamera"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/typeCamera"
        app:layout_constraintTop_toTopOf="@+id/typeCamera" />

    <SeekBar
        android:id="@+id/seekBar10"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:max="1000"
        android:progress="500"
        app:layout_constraintEnd_toEndOf="@+id/typeCamera"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/typeCamera"
        app:layout_constraintTop_toTopOf="@+id/typeCamera" />

    <Button
        android:id="@+id/matButton"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="321dp"
        android:text="Mat"
        app:layout_constraintEnd_toEndOf="@+id/typeCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/typeCamera" />

</androidx.constraintlayout.widget.ConstraintLayout>